--- a/rn_todo/server/package.json
+++ b/rn_todo/server/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@types/node": "^14.0.27",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuidv4": "^6.2.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
