--- a/rn_todo/server/package.json
+++ b/rn_todo/server/package.json
@@ -11,9 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^14.0.27",
+    "@types/node": "^14.6.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "mongodb": "^3.6.0",
     "uuidv4": "^6.2.3"
   },
   "devDependencies": {
